traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:1: error: overriding method run in class SimpleBuggle of type ()Unit;
 method run needs `override' modifier
def run() {
    ^